<resources>
    <string name="app_name">Kufr.ko</string>
    <string name="placeholder_name">Jméno Příjmení</string>
    <string name="placeholder_long">########## ########### ######## ####### ######## #######</string>
    <string name="login_placeholder_name">Username</string>
    <string name="login_placeholder_email">email@exaple.com</string>
    <string name="login_placeholder_password">Password</string>
    <string name="login_button_signIn">Sign in</string>
    <string name="login_button_register">Register</string>
    <string name="login_text_crt">Create an account.</string>
    <string name="login_text_already">Already have an account? Sign in</string>
    <string name="group_online">⬤ Online</string>
    <string name="search_hint">Search</string>
    <string name="chat_placeholder_message">Type a message</string>
    <string name="friends_requests_title">Friend requests</string>
    <string name="friends_normal_title">Friends</string>
    <string name="friends_new_title">Find friends</string>
    <string name="friends_menu_delete">Remove</string>
    <string name="friends_menu_block">Block</string>
    <string name="appbar_profile">My Profile</string>
    <string name="error_invalid_request">Server error. Please try again later</string>
    <string name="error_database_error">Server error. Please try again later</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_empty_email">Please enter a email address</string>
    <string name="error_empty_password">Please enter a password</string>
    <string name="error_empty_name">Please enter a username</string>
    <string name="error_email_already_exists">This email address is already taken</string>
    <string name="error_network">Error connecting to server. Please try again later</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
