<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    tools:context=".fragments.GroupFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/group_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/profile_img_debug"
        app:layout_constraintBottom_toTopOf="@+id/group_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/placeholder_name"
        android:textColor="@color/buttonBackground"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/group_lastMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/group_image"
        app:layout_constraintTop_toTopOf="@+id/group_image" />

    <TextView
        android:id="@+id/group_lastMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/placeholder_long"
        android:textColor="@color/greyTxt"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/group_online"
        app:layout_constraintEnd_toStartOf="@+id/group_lastMessageDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/group_name" />

    <TextView
        android:id="@+id/group_lastMessageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/placeholder_long"
        android:textColor="@color/greyTxt"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/group_name"
        app:layout_constraintTop_toTopOf="@+id/group_lastMessage" />

    <TextView
        android:id="@+id/group_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/group_online"
        android:textColor="@color/greyTxt"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/group_image"
        app:layout_constraintEnd_toEndOf="@+id/group_name"
        app:layout_constraintStart_toStartOf="@+id/group_lastMessage" />

    <View
        android:id="@+id/group_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/buttonBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/group_newMessages"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_notification"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/lightTxt"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/group_image"
        app:layout_constraintTop_toTopOf="@+id/group_image" />

</android.support.constraint.ConstraintLayout>